# plpatterns-site

./: .env.example  .gitignore  CHANGELOG.md  README.md  plpatterns-site.cabal
.github/workflows/: backend.yml
app/: Main.hs
app/Server/: Patterns.hs  Scotty.hs
frontend/: .env.example  api.js  highlight.js  htmlTemplate.js  index.css  index.html  index.js  index.scss  links.js  package-lock.json  package.json
frontend/pages/: error.js  index.js  language.js  notFound.js  pattern.js  search.js
src/: ExampleDb.hs  FileBasedDb.hs
validator/: DbValidator.hs  Main.hs
